# fabrique

./: .gitignore  DECISIONS.md  Dockerfile  README.md  check.sh  pyproject.toml
.devcontainer/: devcontainer.json
docker/: Dockerfile
examples/sft/: main.py
fabrique/: __init__.py  generation.py  generation_nnx.py  loading.py  tokenizer.py  utils.py
fabrique/llama/: README.md  __init__.py  _main.py  convert.py  example.py  generation.py  generation_pt.py  load.py  loading.py  model.py  model2.py  tokenizer.py
fabrique/models/: llm.py
fabrique/models/bert/: __init__.py  load_rules.py  modeling.py
fabrique/models/common/: cache.py  embeddings.py  norm.py  utils.py
fabrique/models/llama/: __init__.py  _main.py  load_rules.py  loading.py  model.py  model_nnx.py  modeling.py
fabrique/models/phi/: __init__.py  load_rules.py  model.py  modeling.py
fabrique/models/qwen/: __init__.py  load_rules.py  modeling.py
fabrique/models/qwen2/: __init__.py  load_rules.py  modeling.py
tests/: manual_test_llama_with_pytorch.py  test_llama.py  test_llm.py  test_loading.py  test_models.py  test_tokenizer.py  test_utils.py  torch_utils.py
tests/manual/: README.md  manual_test_llama_with_pytorch.py  torch_utils.py
